--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "vercel-build": "npm run build",
+    "vercel-build": "npm run build && npx puppeteer browsers install chrome",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -37,6 +37,7 @@
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "@supabase/supabase-js": "^2.84.0",
+    "@types/pdfkit": "^0.17.3",
     "@vercel/node": "^5.4.1",
     "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "^3.0.2",
@@ -48,10 +49,12 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "latex.js": "^0.12.6",
     "magic-sdk": "^31.2.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
     "puppeteer": "^24.31.0",
     "reflect-metadata": "^0.2.2",
